syntax = "proto3";

option java_multiple_files = false;
option java_outer_classname = "OrderProto";

import "product.proto";

service OrderService {
  rpc createOrder (OrderRequest) returns (stream OrderResponse) {}
  rpc getProductInfo (ProductRequest) returns (ProductResponse) {}
}

message OrderRequest {
  string userId = 1;
  repeated OrderItem items = 2;
}

message OrderItem {
  string productId = 1;
  int32 quantity = 2;
}

message OrderResponse {
  string orderId = 1;
  string status = 2;
  double totalPrice = 3;
}
